module07/demo-infra/network.tf
resource "azurerm_network_security_group" "nsg" {
    name = var.nsg_name
    location = azurerm_resource_group.rg-infra.location
    resource_group_name = azurerm_resource_group.rg-infra.name
}

resource "azurerm_virtual_network" "vnet" {
    name = var.vnet_name
    location = azurerm_resource_group.rg-infra.location
    resource_group_name = azurerm_resource_group.rg-infra.name
    address_space = ["10.0.0.0/16"]
    dns_servers = ["10.0.0.4", "10.0.0.5"]
}

resource "azurerm_subnet" "subnet" {
    name = var.subnet_name
    resource_group_name = azurerm_resource_group.rg-infra.name
    virtual_network_name = azurerm_virtual_network.vnet.name
    address_prefixes = ["10.0.0.0/24"]
}

resource "azurerm_subnet_network_security_group_association" "nsg_snet_association" {
    subnet_id = azurerm_subnet.subnet.id
    network_security_group_id = azurerm_network_security_group.nsg.id
}

resource "azurerm_network_security_rule" "ssh_inbound_myIP" {
    name = "SSHInboundMyIP"
    priority = 101
    direction = "Inbound"
    access = "Allow"
    protocol = "Tcp"
    source_port_range = "22"
    destination_port_range = "22"
    source_address_prefix = "123.145.167.189"
    destination_address_prefix = "*"
    resource_group_name = azurerm_resource_group.rg-infra.name
    network_security_group_name = azurerm_network_security_group.nsg.name
}
